Device_Firmware/GT521F52/error.txt
[Fingerprint][2023-05-24 16:04:02,989] Serial connected.
Fingerprint sensor initialized.
QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-root'
Scan your fingerprint: QCoreApplication::exec: The event loop is already running


Scan your fingerprint: QCoreApplication::exec: The event loop is already running
  File "/home/pi/Device_V0.0/Device_Firmware/GT521F52/onlyverifyfinger.py", line 70
    def __init__(self, port, baud, timeout=1, fingerprint_data):
                                                              ^
SyntaxError: non-default argument follows default argument


Exception ignored in: <function Fingerprint.__del__ at 0x7f9ec99d30>
Traceback (most recent call last):
  File "/home/pi/Device_V0.0/Device_Firmware/GT521F52/onlyverifyfinger.py", line 78, in __del__
    self.close_serial()
  File "/home/pi/Device_V0.0/Device_Firmware/GT521F52/onlyverifyfinger.py", line 131, in close_serial
    if self.ser:
AttributeError: 'Fingerprint' object has no attribute 'ser'
Traceback (most recent call last):
  File "/home/pi/Device_V0.0/Device_Firmware/GT521F52/onlyverifyfinger.py", line 429, in <module>
    f = Fingerprint("/dev/ttyUSB0", 9600)
TypeError: __init__() missing 1 required positional argument: 'fingerprint_data'
